--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -872,16 +872,43 @@
                  <layout class="QVBoxLayout" name="verticalLayout_6" stretch="5,2">
                   <item>
                    <widget class="QWidget" name="widget_8" native="true">
-                    <layout class="QVBoxLayout" name="verticalLayout_7">
-                     <item>
+                    <layout class="QGridLayout" name="gridLayout_7" rowstretch="0,0,0" columnstretch="5,3">
+                     <item row="0" column="0">
                       <widget class="QLabel" name="label">
                        <property name="text">
                         <string>输出信息</string>
                        </property>
                       </widget>
                      </item>
-                     <item>
-                      <widget class="QTextEdit" name="textEdit"/>
+                     <item row="1" column="0">
+                      <widget class="QTextEdit" name="modbusText"/>
+                     </item>
+                     <item row="0" column="1">
+                      <widget class="QLabel" name="label_10">
+                       <property name="text">
+                        <string>任务列表</string>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="1" column="1">
+                      <widget class="QListView" name="taskList">
+                       <property name="editTriggers">
+                        <set>QAbstractItemView::NoEditTriggers</set>
+                       </property>
+                      </widget>
+                     </item>
+                     <item row="2" column="0">
+                      <widget class="QPushButton" name="cleanBtn">
+                       <property name="sizePolicy">
+                        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+                         <horstretch>0</horstretch>
+                         <verstretch>0</verstretch>
+                        </sizepolicy>
+                       </property>
+                       <property name="text">
+                        <string>清空窗口</string>
+                       </property>
+                      </widget>
                      </item>
                     </layout>
                    </widget>
@@ -899,27 +926,10 @@
                      <item>
                       <widget class="QWidget" name="widget_2" native="true">
                        <layout class="QGridLayout" name="gridLayout_6">
-                        <item row="1" column="2">
-                         <widget class="QSpinBox" name="startAddress"/>
-                        </item>
-                        <item row="0" column="2">
-                         <widget class="QLabel" name="label_8">
+                        <item row="2" column="0">
+                         <widget class="QLabel" name="label_12">
                           <property name="text">
-                           <string>开始地址</string>
-                          </property>
-                         </widget>
-                        </item>
-                        <item row="0" column="3">
-                         <widget class="QLabel" name="label_9">
-                          <property name="text">
-                           <string>数量</string>
-                          </property>
-                         </widget>
-                        </item>
-                        <item row="0" column="0">
-                         <widget class="QLabel" name="label_6">
-                          <property name="text">
-                           <string>从机地址</string>
+                           <string>寄存器值</string>
                           </property>
                          </widget>
                         </item>
@@ -931,20 +941,16 @@
                          </widget>
                         </item>
                         <item row="1" column="3">
-                         <widget class="QSpinBox" name="coils">
-                          <property name="minimum">
-                           <number>1</number>
-                          </property>
-                         </widget>
+                         <widget class="QSpinBox" name="startAddress"/>
                         </item>
-                        <item row="0" column="1">
+                        <item row="0" column="2">
                          <widget class="QLabel" name="label_7">
                           <property name="text">
                            <string>功能码</string>
                           </property>
                          </widget>
                         </item>
-                        <item row="1" column="1">
+                        <item row="1" column="2">
                          <widget class="QComboBox" name="functionCode">
                           <item>
                            <property name="text">
@@ -988,57 +994,96 @@
                           </item>
                          </widget>
                         </item>
+                        <item row="0" column="4">
+                         <widget class="QLabel" name="label_9">
+                          <property name="text">
+                           <string>数量</string>
+                          </property>
+                         </widget>
+                        </item>
+                        <item row="1" column="4">
+                         <widget class="QSpinBox" name="coils">
+                          <property name="minimum">
+                           <number>1</number>
+                          </property>
+                         </widget>
+                        </item>
+                        <item row="0" column="0">
+                         <widget class="QLabel" name="label_6">
+                          <property name="text">
+                           <string>从机地址</string>
+                          </property>
+                         </widget>
+                        </item>
+                        <item row="0" column="3">
+                         <widget class="QLabel" name="label_8">
+                          <property name="text">
+                           <string>开始地址</string>
+                          </property>
+                         </widget>
+                        </item>
+                        <item row="2" column="2">
+                         <widget class="QLineEdit" name="regInput">
+                          <property name="enabled">
+                           <bool>false</bool>
+                          </property>
+                         </widget>
+                        </item>
                        </layout>
                       </widget>
                      </item>
                      <item>
                       <widget class="QWidget" name="widget_3" native="true">
-                       <layout class="QHBoxLayout" name="horizontalLayout_7">
-                        <item>
-                         <widget class="QComboBox" name="comboBox_2"/>
-                        </item>
+                       <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="1,1,0,1,1,1">
                         <item>
                          <widget class="QPushButton" name="addTaskBtn">
                           <property name="text">
-                           <string>添加读取任务</string>
+                           <string>添加任务</string>
                           </property>
                          </widget>
                         </item>
                         <item>
                          <widget class="QPushButton" name="deleteTaskBtn">
                           <property name="text">
-                           <string>删除读取任务</string>
+                           <string>删除任务</string>
                           </property>
                          </widget>
                         </item>
                         <item>
-                         <spacer name="horizontalSpacer_2">
-                          <property name="orientation">
-                           <enum>Qt::Horizontal</enum>
+                         <widget class="QPushButton" name="singleBtn">
+                          <property name="enabled">
+                           <bool>false</bool>
                           </property>
-                          <property name="sizeHint" stdset="0">
-                           <size>
-                            <width>40</width>
-                            <height>20</height>
-                           </size>
+                          <property name="text">
+                           <string>手动请求</string>
                           </property>
-                         </spacer>
+                         </widget>
                         </item>
                         <item>
-                         <widget class="QLineEdit" name="sendCycle">
-                          <property name="sizePolicy">
-                           <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                           </sizepolicy>
-                          </property>
-                          <property name="placeholderText">
+                         <widget class="QLabel" name="label_11">
+                          <property name="text">
                            <string>读取周期</string>
+                          </property>
+                          <property name="alignment">
+                           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                          </property>
+                         </widget>
+                        </item>
+                        <item>
+                         <widget class="QSpinBox" name="spinBox">
+                          <property name="minimum">
+                           <number>1000</number>
+                          </property>
+                          <property name="maximum">
+                           <number>9999999</number>
                           </property>
                          </widget>
                         </item>
                         <item>
                          <widget class="QCheckBox" name="cycleCheck">
+                          <property name="enabled">
+                           <bool>false</bool>
+                          </property>
                           <property name="text">
                            <string>定时读取</string>
                           </property>
