--- a/style/stylesheetDark.qss
+++ b/style/stylesheetDark.qss
@@ -56,3 +56,11 @@ QToolButton#idBtn:pressed ,QToolButton#toolBtn:pressed{
 QSplitter#splitter::handle {
 
 }
+QTextEdit#modbusText, QListView#taskList {
+
+border: 2px solid #3a3a3c;
+
+border-radius: 4px;   /* 可选，圆角 */
+
+
+}
